--- a/annuity-due/cashflow-6.html
+++ b/annuity-due/cashflow-6.html
@@ -16,36 +16,36 @@
 <body>
     <div class="container-fluid">
 
-
-
-        <!---------------- SLIDE 8 - CONTENT *********** -->
-        <div id="slide8" class="slide">
+        <!---------------- SLIDE 9 - CONTENT ********************** -->
+        <div id="slide9" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Cash Flows</h2>
                     <h3 class="secondary-title">Annuities</h3>
                 </div>
             </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div>
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Annuities</h3>
-                        <hr>
-                        <h5>An annuity is a regularly-scheduled, equal-sized cash flows over a specified, finite period of time.</h5>
-                        <p>To break that down:
+                        <p>There are two types of annuities:
                             <ul>
-                                <li><span class="alert">equal-sized:</span> every payment is the same amount</li>
-                                <li><span class="alert">regularly-scheduled:</span> payments are received at regular intevals (e.g., monthly, annually, or bi-weekly)</li>
-                                <li><span class="alert">specified priod:</span> when the term ends, payments stop</li>
+                                <li>Regular Annuity, also known as an Ordinary Annuity</li>
+                                <li>Annuity Due</li>
                             </ul>
-                            Annuities are similar to perpetuities except that annuities cease after a specific number of payments.
+                        </p>
+                        <p>The difference is in the timing of cash flows.
                             <ul>
-                                <li>Mortgages</li>
-                                <li>Car loans, Credit cards, and other loans</li>
-                                <li>Automatic contributions from your paycheck to a retirement account (e.g., 401k)</li>
-                                <li>A bond with coupon payments</li>
+                                <li>Regular annuity: cash flow arrives at the <span class="alert">end</span> of each period</li>
+                                <li>Annuity due: cash flow arrives at the <span class="alert">beginning</span> of each period</li>
                             </ul>
-                            At some point in your life, you will have one, if not all, of the annuities listed above. Therefore, you will find TVM with cash flows very useful in personal and professional decision making.</p>
+                        </p>
+                        <p>If the problem does not specifiy whether you are dealing with a regular annuity or an annuity due, or if it doesn't state when payments are made, <b>assume that it is a regular annuity</b>.</p>
                     </div>
                 </div>
             </div>
@@ -56,11 +56,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-1">
-                    <div class="page-number">8</div>
+                <div class="col-5 col-sm-3">
+                    <div class="page-number">9</div>
                 </div>
             </div>
         </div>
+        <!---------------- end SLIDE 9 - CONTENT ********************** -->
+
 
 
 
