--- a/annuity-due/cashflow-help1.html
+++ b/annuity-due/cashflow-help1.html
@@ -15,57 +15,29 @@
 
 <body>
     <div class="container-fluid">
-
-
-        <!---------------- help 1 --------------->
-        <div id="tvm3-help1" class="slide help-slide">
+        <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Cash Flows</h2>
-                    <h3 class="secondary-title">Help Me!</h3>
+                    <h2 class="primary-title">TVM: Help</h2>
+                    <!-- <h3 class="secondary-title">Help Me!</h3> -->
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="content">
-                        <h3>Calculating the FV of Lump Sums</h3>
-                        <p class="question">If you plan to deposit $100 at the end of each year for 3 years, how much will you have in 3 years?</p>
-                        <h5>Use the general format of the TVM equation to perform the calculations:</h5>
-                        <div class="row">
-                            <div class="col-12 col-sm-12 col-md-6">
-                                <img src="./images/tvm_basic_equation.png" class="img-fluid " alt="">
-                            </div>
-                            <div class="col-12 col-sm-12 col-md-6">
-                                <img src="./images/tvm3_example_1_ordinary_annuity.png" class="img-fluid " alt="">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 col-sm-12 col-md-4">
-                                <img src="./images/tvm3_example1_lumpsum1.png" class="img-fluid math-img" alt="">
-                            </div>
-                            <div class="col-12 col-sm-12 col-md-4">
-                                <img src="./images/tvm3_example1_lumpsum2.png" class="img-fluid math-img" alt="">
-                            </div>
-                            <div class="col-12 col-sm-12 col-md-4">
-                                <img src="./images/tvm3_example1_lumpsum3.png" class="img-fluid math-img" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div>
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+
+
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <a type="button" class="btn" href="cashflow-1.html">Back</a>
                     <a type="button" class="btn" href="cashflow-3.html">Continue</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-5 col-sm-3">
-                    <div class="page-number">Help 1</div>
-                </div>
-            </div>
         </div>
-        <!---------------- end help 1 --------------->
+
 
 
 
