--- a/annuity-due/lecture3.html
+++ b/annuity-due/lecture3.html
@@ -299,7 +299,7 @@
                         <div class="content">
                             <h3>Perpetuities</h3>
                             <hr>
-                            <h5>A perpetuity is a series of equal-sized, regularly-scheduled payments paid indefinitly.</h5>
+                            <h5>A perpetuity is a series of equal-sized, regularly-scheduled payments paid indefinitely.</h5>
                             <p>To break that down:
                                 <ul>
                                     <li><span class="alert">equal-sized:</span> every payment is the same amount</li>
@@ -309,7 +309,7 @@
                                 Perpetuities are pretty rare. One example is a preferred stock that pays a guaranteed fixed dividend to the shareholder for the life of the company, which is assumed to be infinite. In finance, we are usually concerned with the Present Value (PV) of a perpetuity. For instance:
                                 <ul>
                                     <li>"How much should I pay for that preferred stock with guaranteed fixed dividends?"</li>
-                                    <li>"How much should I ask for today, if I promise to pay someone a certain amount regularly and indefinitly?"</li>
+                                    <li>"How much should I ask for today, if I promise to pay someone a certain amount regularly and indefinitely?"</li>
                                 </ul>
                                 It's important that you know the term, but perpetuities are rare enough that you need not memorize the formula. Just in case you're curious, the Present Value of a perpetuity is:
                                 <div class="bottom-space">
