--- a/tvm4/lecture4.html
+++ b/tvm4/lecture4.html
@@ -197,7 +197,7 @@
                             <h5>Then we introduced the idea of cash flows in the form of perpetuities and annuities</h5>
                             <p>We also introduced two types of annuities based on the timing of payments:
                                 <ul>
-                                    <li>Perpetuity: a series of equal-sized, regularly-scheduled payments paid indefinitly</li>
+                                    <li>Perpetuity: a series of equal-sized, regularly-scheduled payments paid indefinitely</li>
                                     <li>Annuity: a series of equal-sized, regularly-scheduled payments over a specified, finite period of time
                                         <ul>
                                             <li>Ordinary Annuity: Payments are made at the end of each period</li>
