--- a/annuity/cashflow-5.html
+++ b/annuity/cashflow-5.html
@@ -15,42 +15,60 @@
 
 <body>
     <div class="container-fluid">
-        <div id="" class="slide">
+
+
+
+        <!---------------- SLIDE 8 - CONTENT *********** -->
+        <div id="slide8" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Cash Flows</h2>
-                    <!-- <h3 class="secondary-title">Introduction</h3> -->
+                    <h3 class="secondary-title">Annuities</h3>
                 </div>
             </div>
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-1.html">Home</a></div>
-                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div>
                 <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div> -->
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Cash Flows</h3>
-                        <p>Cash flows are defined as:
-                            <div class="question">Regularly scheduled, equal payments over the term of the investment or loan.
-                            </div>
-                        </p>
-                        <p>Cash flows are prevalent in personal and business finance. As a lender, you may receive cash flows in the form of dividends or coupon payments. As a borrower, you may be required to make payments on your car or mortgage. The TVM equation can be modified to account for cash flows, and by adding them, the TVM equation really starts to become useful.</p>
-                        <p>The most common cash flows are <strong>perpetuities and annuities</strong>.</p>
+                        <h3>Annuities</h3>
+                        <hr>
+                        <h5>An annuity is a regularly-scheduled, equal-sized cash flows over a specified, finite period of time.</h5>
+                        <p>To break that down:
+                            <ul>
+                                <li><span class="alert">equal-sized:</span> every payment is the same amount</li>
+                                <li><span class="alert">regularly-scheduled:</span> payments are received at regular intevals (e.g., monthly, annually, or bi-weekly)</li>
+                                <li><span class="alert">specified priod:</span> when the term ends, payments stop</li>
+                            </ul>
+                            Annuities are similar to perpetuities except that annuities cease after a specific number of payments.
+                            <ul>
+                                <li>Mortgages</li>
+                                <li>Car loans, Credit cards, and other loans</li>
+                                <li>Automatic contributions from your paycheck to a retirement account (e.g., 401k)</li>
+                                <li>A bond with coupon payments</li>
+                            </ul>
+                            At some point in your life, you will have one, if not all, of the annuities listed above. Therefore, you will find TVM with cash flows very useful in personal and professional decision making.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-1">
-                    <div class="page-number"></div>
-                </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <a type="button" class="btn" href="cashflow-1.html">Back</a>
                     <a type="button" class="btn" href="cashflow-3.html">Continue</a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">8</div>
+                </div>
+            </div>
         </div>
+
+
 
     </div> <!--  end of container -->
 
