--- a/cashflow/cashflow-3.html
+++ b/cashflow/cashflow-3.html
@@ -23,30 +23,26 @@
                     <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
             </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-1.html">Home</a></div>
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div> -->
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
                         <h3>Example:</h3>
+                        <p>Given the TVM equation with compounding, could you answer this question? <span class="math">\(FV=PV(1+\frac{i}{m})^{n\cdot m}\)</span></p>
                         <p class="question">What is the future value of an account if I deposit $1000 at the start of each year for 10 years at 10% interest?</p>
-                        <p>Given the TVM equation with compounding (below), could you answer this question?
-                            <div class="bottom-space">
-                                <img src="./images/tvm2_question2_p1.png" class="img-fluid " alt="">
-                            </div>
-                        </p>
-                        <p>You could use the formula you already know to calculate the future value of each payment individually and then add them all together, like this:
-                            <div class="bottom-space">
-                                <img src="./images/tvm3_calculate_cash_flows_separately.png" class="img-fluid " alt="">
-                            </div>
-                            ... and so on, until you have the Future Value of all 10 payments. Adding them together results in a Future Value of $17,531.17.
-                        </p>
-                        <p>Although you can find the correct answer by calculating the Future Value of each individual cash flow as demonstrated above, it is a time consuming and inefficient process. Further:
-                            <ul>
-                                <li>Its boring and tedious!</li>
-                                <li>Each individual calculation introduces another opportunity to commit a rounding or calculation error.</li>
-                                <li>Even if you use a spreadsheet and formulas, questions with really long terms (e.g., a 45 year retirement account) are still unwieldy.</li>
-                            </ul>
-                        </p>
 
+                        <p>You could use the formula you already know to calculate the future value of each payment individually and then add them all together, like the image below, until you have the Future Value of all 10 payments. Adding them together results in a Future Value of $17,531.17.
+                            <div class="bottom-space">
+                                <img src="../images/calculate_cash_flows_separately.png" class="img-fluid " alt="calculate pv for each year separately">
+                            </div>
+                        </p>
+                        <p>Although you can find the correct answer by calculating the Future Value of each individual cash flow as demonstrated above, it is a time consuming and inefficient process. In addition, each calculation provides an opportunity to commit a calculation error. Even if you use a spreadsheet and formulas, questions with really long terms (e.g., a 45 year retirement account) are still unwieldy.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -59,9 +55,7 @@
                     <a type="button" class="btn" href="cashflow-4.html">Continue</a>
                 </div>
             </div>
-
         </div>
-
     </div> <!--  end of container -->
 
 
@@ -69,6 +63,8 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
+    </script>
 
     <script src="../script.js"></script>
 </body>
