regular annuity section complete

--- a/annuity-due/cashflow-1.html
+++ b/annuity-due/cashflow-1.html
@@ -7,51 +7,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <!-- problem 4 answer -->
-        <div id="" class="slide exercise-slide">
+
+        <!---------------- Title/Cover slide  *************** -->
+        <div id="" class="slide background-image">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Formulas</h2>
-                    <!-- <h3 class="secondary-title">Exercises</h3> -->
+                    <h1 class="primary-title">Time Value of Money</h1>
+                    <!-- <h2 class="secondary-title">Part 1: The Basics</h2> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-1.html">Home</a></div>
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div> -->
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div> -->
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
-                <div class="col-12">
-                    <div class="content">
-                        <h4>Exercise 4: Solution</h4>
-                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = ?<br>
-                            Future Value (FV) = 1000<br>
-                            i = 12% or 0.12<br>
-                            n = 20</p>
-                    </div>
+                <div class="col-sm-1 offset-sm-1">
+                    <div class="page-number hide">1</div>
+                </div>
+                <div class="offset-5 col-4 offset-md-6">
+                    <a type="button" class="hide btn"></a>
+                    <a type="button" class="btn start" href="cashflow-2.html">Start!</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number"></div>
-                </div>
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
-                </div>
-            </div>
-
         </div>
 
 
