--- a/cashflow-help.html
+++ b/cashflow-help.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 3: Cash Flows</title>
+    <title>TVM - Annuities</title>
 </head>
 
 <body>
@@ -21,8 +21,8 @@
             <div id="tvm3-help1" class="slide help-slide">
                 <div class="row slide-title">
                     <div class="col-12">
-                        <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Help Me!</h3>
+                        <h2 class="primary-title">TVM: Help Me!</h2>
+                        <!-- <h3 class="secondary-title">Help Me!</h3> -->
                     </div>
                 </div>
                 <div class="row">
