--- a/annuity/annuity-4.html
+++ b/annuity/annuity-4.html
@@ -5,64 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Formulas</title>
+    <title>TVM - Ordinary Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-
-        <!-- problem 7  -->
-        <div id="" class="slide exercise-slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Formulas</h2>
-                    <!-- <h3 class="secondary-title">Exercises</h3> -->
+                    <h2 class="primary-title">TVM: Ordinary Annuities</h2>
+                    <!-- <h3 class="secondary-title">Ordinary Annuity</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-7.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 7: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
-                        <p class="question">What interest rate is required for a deposit to double in 10 years? <span class="note">Note: Include 3 digits to the right of the decimal.</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>i </label>
-                                    <input id="int-ex7" type="number" placeholder="0.000"><br>
-                                </form>
-                                <button onclick="exercise_7()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex7"></div>
+                        <p class="question">How much is an annuity worth at the end of three years if it pays $100 at the end of each year assuming 10% interest?</p>
+                        <p>First, identify the variables. Then plug the numbers into the equation. Remember to work the equation according to the order of operations. The total agrees with our calculation of Future Value for each individual lump sum payment.</p>
+                        <div>
+                            <span class="math">\(FVA=CF[\frac{(1+i)^{n}-1}i]\)</span><br>
+                            <span class="math">\(FVA=CF[\frac{(1+.10)^{3}-1}{.10}]\)</span><br>
+                            <span class="math">\(FVA=CF[\frac{(1.331)-1}{.10}]\)</span><br>
+                            <span class="math">\(FVA=CF[\frac{.331}{.10}]\)</span><br>
+                            <span class="math">\(FVA=\$331\)</span>
                         </div>
+
+                        <p></p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number"></div>
+                    <div class="page-number">14</div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="annuity-3.html">Back</a>
+                    <a type="button" class="btn" href="annuity-5.html">Continue</a>
                 </div>
             </div>
-
         </div>
-
 
     </div> <!--  end of container -->
 
@@ -70,9 +63,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
     </script>
 
