--- a/annuity/calc.html
+++ b/annuity/calc.html
@@ -7,55 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Formulas</title>
+    <title>Financial Calculators</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <!-- problem 14 answer -->
-        <div id="" class="slide exercise-slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Formulas</h2>
-                    <!-- <h3 class="secondary-title">Exercises</h3> -->
+                    <h1 class="primary-title">Time Value of Money</h1>
+                    <!-- <h2 class="secondary-title">Part 1: Financial Calculators</h2> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-7.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 14: Solution</h4>
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <div class="math">
-                            = ?<br>
-                            = 10000<br>
-                            = 4% &xrarr; .04<br>
-                            = 10
-                        </div>
+                        <p>Here are links to several online financial calculators. Feel free to use them to assist with this lesson. You may find other suitable calculators by searching online.</p>
+                        <ul>
+                            <li>Use the <a href="https://www.calculator.net/finance-calculator.html?ctype=investlength&ctargetamountv=1000000&cyearsv=10&cstartingprinciplev=20000&cinterestratev=6&ccontributeamountv=1000&ciadditionat1=end&printit=0">Financial Calculator on Calculator.net</a></li>
+                            <li>Try the <a href="https://www.fncalculator.com/financialcalculator?type=tvmCalculator">TVM Calculator on fncalculator.com</a></li>
+                            <li>Take a look at <a href="https://www.msn.com/en-us/money/tools/timevalueofmoney">msn.com's money calculator</a>.</li>
+                        </ul>
+
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number"></div>
-                </div>
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
                 </div>
             </div>
 
         </div>
-
 
     </div> <!--  end of container -->
 
